Added functionless buttons

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     </head>
 
     <body>
+        <textarea id="text">Insert something here to begin a post</textarea>
+        <br>
+        <button id="btn_post">Post</button>
+<hr>
+        <button id="btn_share">Share</button>
+        <button id="btn_like">Like</button>
+        <button id="btn_com">Comment</button>
+
+
         <div id="root"></div>
     </body>
 </html>
