small changes again

--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <a href="signup.html">Sign up</a>
-<div src="index.js" id="login"></div>   
+<div  id="login"></div> 
+<script src="index.js"></script>  
     </body>
 </html>
