--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,14 @@
         <link rel="icon" type="png" href="favicon.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" 
+            rel="stylesheet">
+            <link rel="stylesheet" href="style.css">
         <title>SpaceBook</title>
-        
     </head>
 
     <body>
-        <h2>Would you like to </h2>
-        <a href="signup.html">Sign up</a>
-        <br>
-        <h3>Or</h3>
-        <a href="login.html">Log in</a>
-        <br>
-
         <div id="root"></div>      
-
     </body>
 </html>
